--- a/blog.html
+++ b/blog.html
@@ -11,9 +11,7 @@
                     cabecera</span>
             </div>
             <div id="post">
-                <h1>Este es el titulo
-                    atractivo e interesante del
-                    post</h1>
+                <h1>Aqu&iacute; inicia mi primer blog</h1>
                 <p>Y este es el parrafo de
                     inicio donde vamos a explicar
                     las cosas increibles que se
